<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <TextView
        android:id="@+id/write_textView"
        style="@style/write_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/answer_textView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2+5" />


    <TextView
        android:id="@+id/answer_textView"
        style="@style/answer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="9" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/table" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear_button"
                style="@style/Button"
                android:backgroundTint="@color/red"
                android:text="@string/c"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/plus_and_minus_button"
                style="@style/Button"
                android:textSize="22sp"
                android:text="@string/plus_and_minus_button" />

            <Button
                android:id="@+id/percent_button"
                style="@style/Button"
                android:text="@string/percent"
                android:textColor="@color/green" />

            <Button
                android:id="@+id/divide_button"
                style="@style/Button"
                android:text="@string/divide"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/seven_button"
                style="@style/Button"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight_button"
                style="@style/Button"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine_button"
                style="@style/Button"
                android:text="@string/nine" />
            <Button
                android:id="@+id/multiply_button"
                style="@style/Button"
                android:text="@string/multiply"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/four_button"
                style="@style/Button"
                android:text="@string/four" />
            <Button
                android:id="@+id/five_button"
                style="@style/Button"
                android:text="@string/five" />

            <Button
                android:id="@+id/six_button"
                style="@style/Button"
                android:text="@string/six" />

            <Button
                android:id="@+id/minus_button"
                style="@style/Button"
                android:text="@string/minus"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/one_button"
                style="@style/Button"
                android:text="@string/one" />

            <Button
                android:id="@+id/two_button"
                style="@style/Button"
                android:text="@string/two" />

            <Button
                android:id="@+id/three_button"
                style="@style/Button"
                android:text="@string/three" />

            <Button
                android:id="@+id/plus_button"
                style="@style/Button"
                android:text="@string/plus"
                android:textColor="@color/green" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/zero_button"
                style="@style/Button"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point_button"
                style="@style/Button"
                android:text="@string/point" />

            <Button
                android:id="@+id/equally_button"
                style="@style/equally_button"
                android:backgroundTint="@color/green"
                android:text="@string/equally"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>